c/src/test/resources/c/test/nec_bnc/invalid/ex4-10.ctrl
<controlFile>
  <sourceFile name="../ex4.c" id="1" />
  <run>
    <startPosition fileId="1" line="8" />
    <wayPoint fileId="1" line="10" >
      <function funcName="foo" >
        <wayPoint fileId="1" line="4" >
          <command>
            <cascadeFunction> cascade_check </cascadeFunction>
            <argument><![CDATA[
            valid(&a[x])
            ]]>
            </argument>
          </command>
        </wayPoint>
      </function>
      <loop iterTimes="10" />
    </wayPoint>
    <wayPoint fileId="1" line="12" >
      <function funcName="foo" >
        <wayPoint fileId="1" line="4" >
          <command>
            <cascadeFunction> cascade_check </cascadeFunction>
            <argument><![CDATA[
            valid(&a[x])
            ]]>
            </argument>
          </command>
        </wayPoint>
      </function>
      <loop iterTimes="10" />
    </wayPoint>
    <endPosition fileId="1" line="14" />
  </run>
</controlFile>
